feat: add get all users route
