# docs/swagger.yaml
@@ -1,3 +1,31 @@
+definitions:
+  src_controller.UserResponse:
+    properties:
+      SSOConfig:
+        description: for single sign-on data
+        type: string
+      avatar:
+        type: string
+      createdAt:
+        type: string
+      customization:
+        description: 'for user itself customization config, including: Language, IsSubscribed'
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      nickname:
+        type: string
+      passworddigest:
+        type: string
+      teamID:
+        type: integer
+      uid:
+        type: string
+      updatedAt:
+        type: string
+    type: object
 info:
   contact:
     email: support@example.com
@@ -27,4 +55,31 @@ paths:
       summary: Get the health status of the server
       tags:
       - health
+  /users/{team_id}:
+    get:
+      consumes:
+      - application/json
+      description: Fetch all users belonging to a specific team
+      parameters:
+      - description: Team ID
+        in: path
+        name: team_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/src_controller.UserResponse'
+            type: array
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Get all users by team ID
+      tags:
+      - Users
 swagger: "2.0"
